[package]
name = "git-signify"
version = "0.10.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive", "env"] }
clap_complete = "4.5.40"
either = "1.13.0"
git2 = "0.19.0"
minisign = "0.7.9"
rpassword = "7.3.1"
zeroize = "1.8.1"

[dependencies.libsignify]
git = "https://github.com/badboy/signify-rs"
rev = "01bd2fd4c3aad5fb5484cf41210c9e5bbe0a91cf"
